force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>This object is created to store alll the properties information</description>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP - {000}</displayFormat>
        <label>Property ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>