force-app/main/default/objects/Property__c/fields/Buyin_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyin_Date__c</fullName>
    <label>Buying Date</label>
    <type>Date</type>
</CustomField>