force-app/main/default/objects/Property__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if property is not sold it should be active</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>