force-app/main/default/objects/Property__c/fields/seller_name__c.field-meta.xml
<CustomField>
    <fullName>seller_name__c</fullName>
    <label>Seller Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>