force-app/main/default/objects/Property__c/fields/Text_Field_Rich__c.field-meta.xml
<CustomField>
    <fullName>Text_Field_Rich__c</fullName>
    <label>Text Field Rich</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>