force-app/main/default/objects/Property__c/recordTypes/Commercial_Record.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Record</fullName>
    <active>true</active>
    <label>Commercial Property</label>
</RecordType>