force-app/main/default/objects/Property__c/validationRules/BuyingDateApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>BuyingDateApproved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c ,&quot;Approved&quot;) ,
 ISBLANK(  Registration_Date__c  ) 

)</errorConditionFormula>
    <errorDisplayField>Buyin_Date__c</errorDisplayField>
    <errorMessage>Buying Date cannot be blank if Property is Approved</errorMessage>
</ValidationRule>